--- a/P2/232/232.ipynb
+++ b/P2/232/232.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -315,6 +315,7 @@
     "    # Save the figure\n",
     "    \n",
     "    plt.title(title, fontsize=20)\n",
+    "    plt.tight_layout()\n",
     "    plt.savefig(filename, dpi=300)\n",
     "    plt.show()\n",
     "\n",
